--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Website name</title>
+    <title>Hawamda Maintenance</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -103,7 +103,7 @@
           <div class="col-lg-6">
             <div class="hero-content">
               <span class="wow fadeInLeft" data-wow-delay=".2s"
-                >Welcome To...</span
+                >Welcome To Hawamda Maintenance</span
               >
             </div>
           </div>
@@ -270,13 +270,13 @@
           <div class="col-xl-3 col-md-6">
             <div class="single-service">
               <div class="icon color-1">
-                <i class="lni lni-layers"></i>
+                <i class="lni lni-hammer"></i>
               </div>
               <div class="content">
-                <h3>UI/UX design</h3>
+                <h3>Plumbing</h3>
                 <p>
-                  Lorem ipsum dolor sitsdw consetsad pscing eliewtr, diam
-                  nonumy.
+                  Plumbing is a crucial system that deals with the installation,
+                  and maintenance
                 </p>
               </div>
             </div>
@@ -284,13 +284,13 @@
           <div class="col-xl-3 col-md-6">
             <div class="single-service">
               <div class="icon color-2">
-                <i class="lni lni-code-alt"></i>
+                <i class="lni lni-brush"></i>
               </div>
               <div class="content">
-                <h3>Web design</h3>
+                <h3>Electrical</h3>
                 <p>
-                  Lorem ipsum dolor sitsdw consetsad pscing eliewtr, diam
-                  nonumy.
+                  Electrical engineering is a field of engineering that deals
+                  with the study, and design.
                 </p>
               </div>
             </div>
@@ -301,10 +301,10 @@
                 <i class="lni lni-pallet"></i>
               </div>
               <div class="content">
-                <h3>Graphics design</h3>
+                <h3>Applicance</h3>
                 <p>
-                  Lorem ipsum dolor sitsdw consetsad pscing eliewtr, diam
-                  nonumy.
+                  Appliances play a vital role in our daily lives, making
+                  household chores.
                 </p>
               </div>
             </div>
@@ -315,10 +315,9 @@
                 <i class="lni lni-vector"></i>
               </div>
               <div class="content">
-                <h3>Brand design</h3>
+                <h3>HVAC</h3>
                 <p>
-                  Lorem ipsum dolor sitsdw consetsad pscing eliewtr, diam
-                  nonumy.
+                  HVAC stands for Heating, Ventilation, and Air Conditioning.
                 </p>
               </div>
             </div>
@@ -584,9 +583,10 @@
               <div class="footer-widget">
                 <h3>Link</h3>
                 <ul class="links">
-                  <li><a href="javascript:void(0)">Home</a></li>
-                  <li><a href="javascript:void(0)">About</a></li>
-                  <li><a href="javascript:void(0)">Services</a></li>
+                  <li><a href="#Home">Home</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li><a href="#service">Services</a></li>
+                  <li><a href="#contact">Contact</a></li>
                 </ul>
               </div>
             </div>
@@ -595,13 +595,13 @@
               <div class="footer-widget">
                 <h3>Services</h3>
                 <ul class="links">
-                  <li><a href="javascript:void(0)">Graphic design</a></li>
-                  <li><a href="javascript:void(0)">Web design</a></li>
-                  <li><a href="javascript:void(0)">Visual design</a></li>
-                  <li><a href="javascript:void(0)">Product design</a></li>
-                  <li><a href="javascript:void(0)">UI/UX design</a></li>
-                  <li><a href="javascript:void(0)">Web development</a></li>
-                  <li><a href="javascript:void(0)">Startup business</a></li>
+                  <li><a href="">Plumbing</a></li>
+                  <li><a href="">Electrical </a></li>
+                  <li><a href="">Appliance</a></li>
+                  <li><a href="">HVAC</a></li>
+                  <li><a href="">UI/UX design</a></li>
+                  <li><a href="">General Handyman </a></li>
+                  <li><a href="">Locksmith </a></li>
                 </ul>
               </div>
             </div>
@@ -611,7 +611,7 @@
                 <h3>Contact</h3>
                 <ul>
                   <li>+003894372632</li>
-                  <li>screepho@gmail.ccom</li>
+                  <li>abe@hawamda.com</li>
                   <li>United state of America</li>
                 </ul>
                 <div
@@ -634,8 +634,8 @@
         <div class="copy-right">
           <p>
             Design and Developed by
-            <a href="https://screepho.com" rel="nofollow" target="_blank">
-              Screepho
+            <a href="https://narmna2.com" rel="nofollow" target="_blank">
+              narma
             </a>
           </p>
         </div>
