Added details to README.md and made changes to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Hawamda Maintenance</title>
+    <title>HAWAMDA MAINTENANCE</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="assets/img/favicon.svg"
-    />
+    <link rel="icon" type="image/png" href="./assets/img/logo/hawamda.png">
+
     <!-- Place favicon.ico in the root directory -->
 
     <!-- ========================= CSS here ========================= -->
@@ -38,7 +35,7 @@
         </div>
       </div>
     </div>
-    <!-- preloader end -->
+    <!-- ========================= preloader end ========================= -->
 
     <!-- ========================= header start ========================= -->
     <header class="header">
@@ -48,7 +45,7 @@
             <div class="col-lg-12">
               <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="index.html">
-                  <img src="assets/img/logo/logo.svg" alt="Logo" />
+                  <img src="assets/img/logo/hawamda.png" alt="Logo" />
                 </a>
                 <button
                   class="navbar-toggler"
@@ -94,7 +91,7 @@
       </div>
       <!-- navbar area -->
     </header>
-    <!-- ========================= header end ========================= -->
+    <!-- ============================ header end ============================== -->
 
     <!-- ========================= hero-section start ========================= -->
     <section id="home" class="hero-section">
@@ -102,50 +99,18 @@
         <div class="row align-items-center">
           <div class="col-lg-6">
             <div class="hero-content">
-              <span class="wow fadeInLeft" data-wow-delay=".2s"
-                >Welcome To Hawamda Maintenance</span
-              >
+              <span class="wow fadeInLeft" data-wow-delay=".2s">Caring for Your Business, One Service at a Time</span>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="hero-img wow fadeInUp" data-wow-delay=".5s">
-              <img src="assets/img/hero/hero-img.svg" alt="" />
+              <img src="assets/img/logo/hawamda.png" alt="Handyman with company name around him." />
             </div>
           </div>
         </div>
       </div>
     </section>
     <!-- ========================= hero-section end ========================= -->
-
-    <!-- ========================= client-logo-section start ========================= -->
-    <section class="client-logo-section pt-150">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-sm-6">
-            <div class="single-logo text-center">
-              <img src="assets/img/client-logo/lineicons.svg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="single-logo text-center">
-              <img src="assets/img/client-logo/uideck.svg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="single-logo text-center">
-              <img src="assets/img/client-logo/pagebulb.svg" alt="" />
-            </div>
-          </div>
-          <div class="col-lg-3 col-sm-6">
-            <div class="single-logo text-center">
-              <img src="assets/img/client-logo/graygrids.svg" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ========================= client-logo-section end ========================= -->
-
     <!-- ========================= about-section start ========================= -->
     <section id="about" class="about-section pt-150">
       <div class="container">
@@ -158,12 +123,9 @@
           <div class="col-lg-6">
             <div class="about-content mb-50">
               <div class="section-title mb-50">
-                <h1 class="mb-25">Read more about our Digital Agency</h1>
+                <h1 class="mb-25">We are a maintenance services provider.</h1>
                 <p>
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,sed
-                  diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                  aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                  justo duo dolores.
+                  We are your trusted partner for all your maintenance needs. With a passion for perfection and a commitment to excellence, we take pride in delivering top-notch maintenance services to businesses of all sizes. Our dedicated team ensures that your property always looks its best, allowing you to focus on what you do best – running your business.
                 </p>
               </div>
               <div class="accordion pb-15" id="accordionExample">
@@ -176,7 +138,7 @@
                     aria-expanded="true"
                     aria-controls="collapseOne"
                   >
-                    Which Service We Provide?
+                  What types of maintenance services do you offer?
                   </button>
 
                   <div
@@ -186,9 +148,8 @@
                     data-bs-parent="#accordionExample"
                   >
                     <div class="faq-content">
-                      Anim pariatur0 cliche reprehenderit, enim eiusmod high
-                      life accusamus terry richardson ad squid. 3 wolf moon
-                      officia aute, non cupidatat skateboard dolor brunch.
+                      We offer a wide range of maintenance services, including but not limited to plumbing, HVAC maintenance, electrical, and general repairs. If you have a specific need, don't hesitate to reach out, and we'll do our best to accommodate.
+.
                     </div>
                   </div>
                 </div>
@@ -201,7 +162,7 @@
                     aria-expanded="false"
                     aria-controls="collapseTwo"
                   >
-                    What I need to start design?
+                  How can I request your services?
                   </button>
                   <div
                     id="collapseTwo"
@@ -210,9 +171,7 @@
                     data-bs-parent="#accordionExample"
                   >
                     <div class="faq-content">
-                      Anim pariatur cliche1 reprehenderit, enim eiusmod high
-                      life accusamus terry richardson ad squid. 3 wolf moon
-                      officia aute, non cupidatat skateboard dolor brunch.
+                      To request our services, simply fill out the "Submit Request" form located at the bottom of this page. Provide us with some basic information about your maintenance needs, and our team will get in touch with you promptly to discuss the details and provide a customized solution.
                     </div>
                   </div>
                 </div>
@@ -225,7 +184,7 @@
                     aria-expanded="false"
                     aria-controls="collapseThree"
                   >
-                    What is our design process?
+                  Is your team experienced and reliable??
                   </button>
                   <div
                     id="collapseThree"
@@ -234,12 +193,11 @@
                     data-bs-parent="#accordionExample"
                   >
                     <div class="faq-content">
-                      Anim pariatur cliche reprehenderit2, enim eiusmod high
-                      life accusamus terry richardson ad squid. 3 wolf moon
-                      officia aute, non cupidatat skateboard dolor brunch.
+                      Absolutely! Our team is highly experienced, well-trained, and dedicated to delivering quality service. We're committed to being a reliable partner for your business.
                     </div>
                   </div>
                 </div>
+                
               </div>
             </div>
           </div>
@@ -442,7 +400,7 @@
                   animation-name: fadeInUp;
                 "
               >
-                Get in touch
+                Submit your request below
               </h1>
               <p
                 class="wow fadeInUp"
@@ -453,8 +411,7 @@
                   animation-name: fadeInUp;
                 "
               >
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                diam nonumy eirmod tempor invidunt labore.
+                Give us all the details and we'll contact you shortly.
               </p>
             </div>
           </div>
@@ -468,7 +425,7 @@
                   name="name"
                   id="name"
                   class="form-input"
-                  placeholder="Your Name"
+                  placeholder="Company Name"
                   required
                 />
               </div>
@@ -480,7 +437,7 @@
                   name="email"
                   id="email"
                   class="form-input"
-                  placeholder="Your Email"
+                  placeholder="Email"
                   required
                 />
               </div>
@@ -523,7 +480,7 @@
                   id="message"
                   rows="8"
                   class="form-input"
-                  placeholder="Type Message"
+                  placeholder="Describe the issue here..."
                   spellcheck="false"
                 ></textarea>
               </div>
@@ -531,7 +488,7 @@
             <div class="col-md-12">
               <div class="form-btn text-center">
                 <button type="submit" class="main-btn btn-hover">
-                  Submit Message
+                  Submit Request
                 </button>
               </div>
             </div>
