--- a/client/index.html
+++ b/client/index.html
@@ -632,7 +632,7 @@
           const message = document.getElementById("message").value;
 
           // Define the URL where you want to send the data
-          const url = "http://localhost:5000/api/sendEmail"; // Replace with your server's endpoint
+          const url = "http://16.170.22.69/api/sendEmail"; // Replace with your server's endpoint
 
           // Make a Fetch request to send the data
           fetch(url, {
