--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <title>HAWAMDA MAINTENANCE</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="./assets/img/logo/hawamda.png">
+    <link rel="icon" type="image/png" href="./assets/img/logo/hawamda.png" />
 
     <!-- Place favicon.ico in the root directory -->
 
@@ -99,12 +99,17 @@
         <div class="row align-items-center">
           <div class="col-lg-6">
             <div class="hero-content">
-              <span class="wow fadeInLeft" data-wow-delay=".2s">Caring for Your Business, One Service at a Time</span>
+              <span class="wow fadeInLeft" data-wow-delay=".2s"
+                >Caring for Your Business, One Service at a Time</span
+              >
             </div>
           </div>
           <div class="col-lg-6">
             <div class="hero-img wow fadeInUp" data-wow-delay=".5s">
-              <img src="assets/img/logo/hawamda.png" alt="Handyman with company name around him." />
+              <img
+                src="assets/img/logo/hawamda.png"
+                alt="Handyman with company name around him."
+              />
             </div>
           </div>
         </div>
@@ -125,7 +130,12 @@
               <div class="section-title mb-50">
                 <h1 class="mb-25">We are a maintenance services provider.</h1>
                 <p>
-                  We are your trusted partner for all your maintenance needs. With a passion for perfection and a commitment to excellence, we take pride in delivering top-notch maintenance services to businesses of all sizes. Our dedicated team ensures that your property always looks its best, allowing you to focus on what you do best – running your business.
+                  We are your trusted partner for all your maintenance needs.
+                  With a passion for perfection and a commitment to excellence,
+                  we take pride in delivering top-notch maintenance services to
+                  businesses of all sizes. Our dedicated team ensures that your
+                  property always looks its best, allowing you to focus on what
+                  you do best – running your business.
                 </p>
               </div>
               <div class="accordion pb-15" id="accordionExample">
@@ -138,7 +148,7 @@
                     aria-expanded="true"
                     aria-controls="collapseOne"
                   >
-                  What types of maintenance services do you offer?
+                    What types of maintenance services do you offer?
                   </button>
 
                   <div
@@ -148,8 +158,11 @@
                     data-bs-parent="#accordionExample"
                   >
                     <div class="faq-content">
-                      We offer a wide range of maintenance services, including but not limited to plumbing, HVAC maintenance, electrical, and general repairs. If you have a specific need, don't hesitate to reach out, and we'll do our best to accommodate.
-.
+                      We offer a wide range of maintenance services, including
+                      but not limited to plumbing, HVAC maintenance, electrical,
+                      and general repairs. If you have a specific need, don't
+                      hesitate to reach out, and we'll do our best to
+                      accommodate. .
                     </div>
                   </div>
                 </div>
@@ -162,7 +175,7 @@
                     aria-expanded="false"
                     aria-controls="collapseTwo"
                   >
-                  How can I request your services?
+                    How can I request your services?
                   </button>
                   <div
                     id="collapseTwo"
@@ -171,7 +184,11 @@
                     data-bs-parent="#accordionExample"
                   >
                     <div class="faq-content">
-                      To request our services, simply fill out the "Submit Request" form located at the bottom of this page. Provide us with some basic information about your maintenance needs, and our team will get in touch with you promptly to discuss the details and provide a customized solution.
+                      To request our services, simply fill out the "Submit
+                      Request" form located at the bottom of this page. Provide
+                      us with some basic information about your maintenance
+                      needs, and our team will get in touch with you promptly to
+                      discuss the details and provide a customized solution.
                     </div>
                   </div>
                 </div>
@@ -184,7 +201,7 @@
                     aria-expanded="false"
                     aria-controls="collapseThree"
                   >
-                  Is your team experienced and reliable??
+                    Is your team experienced and reliable??
                   </button>
                   <div
                     id="collapseThree"
@@ -193,11 +210,12 @@
                     data-bs-parent="#accordionExample"
                   >
                     <div class="faq-content">
-                      Absolutely! Our team is highly experienced, well-trained, and dedicated to delivering quality service. We're committed to being a reliable partner for your business.
+                      Absolutely! Our team is highly experienced, well-trained,
+                      and dedicated to delivering quality service. We're
+                      committed to being a reliable partner for your business.
                     </div>
                   </div>
                 </div>
-                
               </div>
             </div>
           </div>
@@ -639,6 +657,7 @@
             method: "POST",
             headers: {
               "Content-Type": "application/json",
+              "Referrer-Policy": "strict-origin-when-cross-origin",
             },
             body: JSON.stringify({
               email,
