Update service and API link

--- a/client/index.html
+++ b/client/index.html
@@ -240,7 +240,7 @@
         </div>
 
         <div class="row">
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-4 col-md-6">
             <div class="single-service">
               <div class="icon color-1">
                 <i class="lni lni-hammer"></i>
@@ -254,7 +254,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-4 col-md-6">
             <div class="single-service">
               <div class="icon color-2">
                 <i class="lni lni-brush"></i>
@@ -268,7 +268,7 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-4 col-md-6">
             <div class="single-service">
               <div class="icon color-3">
                 <i class="lni lni-pallet"></i>
@@ -282,7 +282,33 @@
               </div>
             </div>
           </div>
-          <div class="col-xl-3 col-md-6">
+          <div class="col-xl-4 col-md-6">
+            <div class="single-service">
+              <div class="icon color-4">
+                <i class="lni lni-vector"></i>
+              </div>
+              <div class="content">
+                <h3>HVAC</h3>
+                <p>
+                  HVAC stands for Heating, Ventilation, and Air Conditioning.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-md-6">
+            <div class="single-service">
+              <div class="icon color-4">
+                <i class="lni lni-vector"></i>
+              </div>
+              <div class="content">
+                <h3>HVAC</h3>
+                <p>
+                  HVAC stands for Heating, Ventilation, and Air Conditioning.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-xl-4 col-md-6">
             <div class="single-service">
               <div class="icon color-4">
                 <i class="lni lni-vector"></i>
@@ -614,7 +640,7 @@
         <div class="copy-right">
           <p>
             Design and Developed by
-            <a href="https://narmna2.com" rel="nofollow" target="_blank">
+            <a href="https://narma2.com" rel="nofollow" target="_blank">
               narma
             </a>
           </p>
@@ -650,7 +676,7 @@
           const message = document.getElementById("message").value;
 
           // Define the URL where you want to send the data
-          const url = "http://16.170.22.69/api/sendEmail"; // Replace with your server's endpoint
+          const url = "https://api.hawamda.com/api/sendEmail"; // Replace with your server's endpoint
 
           // Make a Fetch request to send the data
           fetch(url, {
