fixed image files

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <title>HAWAMDA MAINTENANCE</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="./assets/img/logo/hawamda.png" />
+    <link rel="icon" type="image/png" href="./assets/img/logo/handyman_white.png">
 
     <!-- Place favicon.ico in the root directory -->
 
@@ -16,6 +16,13 @@
     <link rel="stylesheet" href="assets/css/tiny-slider.css" />
     <link rel="stylesheet" href="assets/css/animate.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <style>
+      .small-logo {
+        width: 100px; /* Adjust the width to your desired size */
+        height: auto; /* This maintains the aspect ratio */
+      }
+    </style>
+  
   </head>
   <body>
     <!-- ========================= preloader start ========================= -->
@@ -45,7 +52,7 @@
             <div class="col-lg-12">
               <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="index.html">
-                  <img src="assets/img/logo/hawamda.png" alt="Logo" />
+                  <img class="small-logo" src="assets/img/logo/hawamda.png" alt="Logo" />
                 </a>
                 <button
                   class="navbar-toggler"
@@ -639,10 +646,7 @@
 
         <div class="copy-right">
           <p>
-            Design and Developed by
-            <a href="https://narma2.com" rel="nofollow" target="_blank">
-              narma
-            </a>
+            Copyright © 2023 HAWAMDA MAINTENANCE Inc. All rights reserved.
           </p>
         </div>
       </div>
