--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,10 @@
         width: 100px; /* Adjust the width to your desired size */
         height: auto; /* This maintains the aspect ratio */
       }
+      .medium-logo {
+        width: 200px; /* Adjust the width to your desired size */
+        height: auto; /* This maintains the aspect ratio */
+      }
     </style>
   
   </head>
@@ -560,13 +564,11 @@
               <div class="footer-widget">
                 <div class="logo mb-35">
                   <a href="index.html">
-                    <img src="assets/img/logo/logo.svg" alt="" />
+                    <img class="medium-logo" src="assets/img/logo/hawamda.png" alt="" />
                   </a>
                 </div>
                 <p class="desc mb-35">
-                  We are expert designer team, There have a lot of designer and
-                  developer If you have any project you can hire Create a
-                  website.
+                  We are expert your one stop to all your maintenance needs.
                 </p>
                 <ul class="socials">
                   <li>
@@ -623,7 +625,7 @@
               <div class="footer-widget">
                 <h3>Contact</h3>
                 <ul>
-                  <li>+003894372632</li>
+                  <li>+1 (321) 305-7727</li>
                   <li>abe@hawamda.com</li>
                   <li>United state of America</li>
                 </ul>
