--- a/client/index.html
+++ b/client/index.html
@@ -345,12 +345,10 @@
             <div class="counter-up-content mb-50">
               <div class="section-title mb-40">
                 <h1 class="mb-20 wow fadeInUp" data-wow-delay=".2s">
-                  Why we are the best, Why you hire?
+                  Why do business with us?
                 </h1>
                 <p class="wow fadeInUp" data-wow-delay=".4s">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,sed
-                  diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                  aliquyam erat.
+                  For over 25 years, HAWAMDA MAINTENANCE has been providing top quality maintenance services to businesses of all sizes. We are a trusted partner for many businesses in the United States, and we take pride in delivering quality service and exceptional customer experience.
                 </p>
               </div>
               <div class="counter-up-wrapper">
@@ -369,7 +367,7 @@
                         >
                           3642
                         </h1>
-                        <span>Happy client</span>
+                        <span>Happy clients</span>
                       </div>
                     </div>
                   </div>
@@ -387,7 +385,7 @@
                         >
                           5436
                         </h1>
-                        <span>Project done</span>
+                        <span>Requests completed</span>
                       </div>
                     </div>
                   </div>
@@ -403,9 +401,9 @@
                           cup-end="642"
                           cup-append="K"
                         >
-                          642
+                          50
                         </h1>
-                        <span>Live Design</span>
+                        <span>Years of combined experience</span>
                       </div>
                     </div>
                   </div>
@@ -421,9 +419,9 @@
                           cup-end="42"
                           cup-append=" "
                         >
-                          42
+                          50+
                         </h1>
-                        <span>Creative designer's</span>
+                        <span>Technicians in the Westchester County Area</span>
                       </div>
                     </div>
                   </div>
@@ -568,7 +566,7 @@
                   </a>
                 </div>
                 <p class="desc mb-35">
-                  We are expert your one stop to all your maintenance needs.
+                  We are your one stop to all your maintenance needs.
                 </p>
                 <ul class="socials">
                   <li>
