--- a/client/index.html
+++ b/client/index.html
@@ -625,7 +625,7 @@
                 <ul>
                   <li>+1 (321) 305-7727</li>
                   <li>abe@hawamda.com</li>
-                  <li>United state of America</li>
+                  <li>United States of America</li>
                 </ul>
                 <div
                   class="contact_map"
