--- a/client/index.html
+++ b/client/index.html
@@ -173,7 +173,7 @@
                       but not limited to plumbing, HVAC maintenance, electrical,
                       and general repairs. If you have a specific need, don't
                       hesitate to reach out, and we'll do our best to
-                      accommodate. .
+                      accommodate.
                     </div>
                   </div>
                 </div>
@@ -243,8 +243,7 @@
             <div class="section-title text-center mb-50">
               <h1>Our services</h1>
               <p>
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                diam nonumy eirmod tempor invidunt labore.
+                Checkout from our provided services below.
               </p>
             </div>
           </div>
@@ -312,9 +311,9 @@
                 <i class="lni lni-vector"></i>
               </div>
               <div class="content">
-                <h3>HVAC</h3>
+                <h3>Painting and Drywall Repair</h3>
                 <p>
-                  HVAC stands for Heating, Ventilation, and Air Conditioning.
+                  Freshen up your interior with our painting services, and say goodbye to unsightly wall damage with our expert drywall repair.
                 </p>
               </div>
             </div>
@@ -325,9 +324,9 @@
                 <i class="lni lni-vector"></i>
               </div>
               <div class="content">
-                <h3>HVAC</h3>
+                <h3>Carpentry Work</h3>
                 <p>
-                  HVAC stands for Heating, Ventilation, and Air Conditioning.
+                  Whether it's fixing a broken cabinet or installing custom shelves, our carpentry services add a touch of craftsmanship to your space.
                 </p>
               </div>
             </div>
