--- a/client/index.html
+++ b/client/index.html
@@ -331,6 +331,19 @@
               </div>
             </div>
           </div>
+          <div class="col-xl-4 col-md-6">
+           <div class="single-service">
+            <div class="icon color-4">
+              <i class="lni lni-vector"></i>
+            </div>
+            <div class="content">
+              <h3>Carpentry Work</h3>
+              <p>
+                  Whether it's fixing a broken cabinet or installing custom shelves, our carpentry services add a touch of craftsmanship to your space.
+              </p>
+            </div>
+          </div>
+        </div>
         </div>
       </div>
     </section>
